Update Java bindings for HDR support (#1147)
The PR https://github.com/KhronosGroup/KTX-Software/pull/1100 added HDR
support.

This PR updates the Java bindings accordingly so fixes #1144.

What it does:

- Adds the `UASTC_HDR_6X6_INTERMEDIATE` supercompression scheme enum
value
- Adds the `RGBA_HALF`/`ASTC_HDR_4x4_RGBA`/`ASTC_HDR_6x6_RGBA` transcode
format enum values
- Adds a new `KtxBasisCodec` class, corresponding to the codec enum, as
requested in [a review
comment](https://github.com/KhronosGroup/KTX-Software/pull/1100#discussion_r2725412580)
- Adds the new fields that have been added to `ktxBasisParams` (like
`uastcHDRUltraQuant` etc) to the `KtxBasisParams` class
- (Minor corresponding cleanups)
- Wires the new fields to the native side accordingly, e.g.
[initialize](https://github.com/KhronosGroup/KTX-Software/blob/1499a5534b19afd7cd5cf1d5e5c1296ce36d1f14/interface/java_binding/src/main/cpp/libktx-jni.cpp#L176)
and [fills the native
struct](https://github.com/KhronosGroup/KTX-Software/blob/1499a5534b19afd7cd5cf1d5e5c1296ce36d1f14/interface/java_binding/src/main/cpp/libktx-jni.cpp#L322)
- Adds native versions of the 
`KTX_API ktx_bool_t KTX_APIENTRY ktxTexture1_IsTranscodable(ktxTexture1*
This);`
  functions (for `KtxTexture1` and `KtxTexture2`)
- Adds `getColorModel`, `getTransferFunction`, `isHDR`.
- Adds a couple of tests.